More enthusiastic title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="#">¡Bienvenido a nuestro sitio!</a></div>
+				<div class="logo"><a href="#">¡Bienvenido a nuestro super sitio!!</a></div>
 			</header>
 
 		<!-- Main -->
